Increased UT coverage and addressed PR Comments
Signed-off-by: expani <anijainc@amazon.com>